Fixed clean urls

--- a/drupal/Dockerfile
+++ b/drupal/Dockerfile
@@ -2,6 +2,8 @@ FROM maxexcloo/nginx-php
 
 MAINTAINER Flemming Andersen <flemming@flamingcode.com>
 
+WORKDIR /data
+
 # Install composer
 RUN wget -qO - "https://getcomposer.org/installer" | php > /dev/null 2>&1
 RUN mv composer.phar /usr/local/bin/composer
@@ -10,7 +12,7 @@ RUN mv composer.phar /usr/local/bin/composer
 RUN composer -q require drush/drush:6.*
 RUN ln -sf /data/vendor/bin/drush /usr/local/bin/drush
 
-RUN drush dl drupal
+RUN drush dl drupal > /dev/null 2>&1
 RUN mv drupal-*/ /data/http
 
-WORKDIR /data/http
+ADD config /data/config
