--- a/drupal/conf.d/nginx-drupal.conf
+++ b/drupal/conf.d/nginx-drupal.conf
@@ -30,11 +30,11 @@ location ~ (^|/)\. {
 	return 403;
 }
 
-location / {
-	# This is cool because no php is touched for static content
-	try_files $uri @rewrite;
-}
-
-location @rewrite {
-	rewrite ^ /index.php;
-}
+#location / {
+#	# This is cool because no php is touched for static content
+#	try_files $uri @rewrite;
+#}
+#
+#location @rewrite {
+#	rewrite ^ /index.php;
+#}
