--- a/drupal/conf.d/nginx-drupal.conf
+++ b/drupal/conf.d/nginx-drupal.conf
@@ -18,11 +18,6 @@ location ~ \..*/.*\.php$ {
 	return 403;
 }
 
-# No no for private
-location ~ ^/sites/.*/private/ {
-	return 403;
-}
-
 # Block access to "hidden" files and directories whose names begin with a
 # period. This includes directories used by version control systems such
 # as Subversion or Git to store control files.
@@ -30,11 +25,11 @@ location ~ (^|/)\. {
 	return 403;
 }
 
-#location / {
-#	# This is cool because no php is touched for static content
-#	try_files $uri @rewrite;
-#}
-#
-#location @rewrite {
-#	rewrite ^ /index.php;
-#}
+location ~ ^/sites/.*/files/styles/ {
+	try_files $uri @rewrite;
+}
+
+location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+	expires max;
+	log_not_found off;
+}
