Fixed a couple of issues with apache-php image

--- a/apache-php/Dockerfile
+++ b/apache-php/Dockerfile
@@ -2,6 +2,8 @@ FROM flemeur/debian
 
 MAINTAINER Flemming Andersen <flemming@flamingcode.com>
 
+COPY run.sh /run.sh
+
 RUN apt-get update && apt-get install -y \
 apache2 libapache2-mod-php5 \
 php5-curl php5-gd php5-mcrypt php5-mysql php5-pgsql php5-sqlite \
@@ -20,8 +22,6 @@ ENV HOME /var/sites/default
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-USER www-data
-
-CMD ["/usr/sbin/apache2","-D","FOREGROUND"]
+CMD ["/run.sh"]
 
 EXPOSE 80
