Added logic for changing the uid and gid of the www-data user when running in development, ie. with mounted volume. Fixes permissionj issues when developing using docker-compose

--- a/nginx-php/Dockerfile
+++ b/nginx-php/Dockerfile
@@ -8,6 +8,11 @@ libgd2-xpm \
 php5-fpm php5-cli php5-curl php5-gd php5-mcrypt php5-mysql php5-pgsql php5-sqlite \
 && apt-get clean
 
+# Install composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+COPY run.sh /run.sh
+
 COPY etc /etc
 
 RUN rm /etc/nginx/sites-*/www && cd /etc/nginx/sites-enabled && ln -s /etc/nginx/sites-available/default default
@@ -17,7 +22,4 @@ RUN mkdir -p /var/sites/default/conf.d /var/sites/default/public
 WORKDIR /var/sites/default
 ENV HOME /var/sites/default
 
-# Install composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
-CMD ["/usr/bin/supervisord"]
+CMD ["/run.sh"]
