--- a/apache-php/etc/apache2/sites-available/default.conf
+++ b/apache-php/etc/apache2/sites-available/default.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 	ServerName localhost
-
 	ServerAdmin webmaster@localhost
+
 	DocumentRoot /var/sites/default/public
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
@@ -14,8 +14,16 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 	<Directory /var/sites/default/public>
+		Options Indexes FollowSymLinks
 		AllowOverride All
-		Order allow,deny
-		Allow from all
+		Require all granted
+		#Order allow,deny
+		#Allow from all
 	</Directory>
+
+#<Directory /srv/>
+#	Options Indexes FollowSymLinks
+#	AllowOverride None
+#	Require all granted
+#</Directory>
 </VirtualHost>
