Removing pgsql and sqlite, and adding intl support

--- a/apache-php/etc/apache2/sites-available/default.conf
+++ b/apache-php/etc/apache2/sites-available/default.conf
@@ -14,16 +14,10 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 	<Directory /var/sites/default/public>
-		Options Indexes FollowSymLinks
+		Options -Indexes FollowSymLinks
 		AllowOverride All
 		Require all granted
 		#Order allow,deny
 		#Allow from all
 	</Directory>
-
-#<Directory /srv/>
-#	Options Indexes FollowSymLinks
-#	AllowOverride None
-#	Require all granted
-#</Directory>
 </VirtualHost>
