--- a/apache-php/Dockerfile
+++ b/apache-php/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Flemming Andersen <flemming@flamingcode.com>
 
 RUN apt-get update && apt-get install -y \
 apache2 libapache2-mod-php5 \
-php5 php5-curl php5-gd php5-mcrypt php5-mysql php5-pgsql php5-sqlite \
+php5 php5-curl php5-gd php5-mcrypt php5-mysql php5-intl \
 && apt-get clean
 
 # Enable rewrite
