--- a/apache-php/etc/apache2/sites-available/default.conf
+++ b/apache-php/etc/apache2/sites-available/default.conf
@@ -14,7 +14,7 @@
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 
 	<Directory /var/sites/default/public>
-		Options -Indexes FollowSymLinks
+		Options -Indexes +FollowSymLinks
 		AllowOverride All
 		Require all granted
 		#Order allow,deny
