Add recursive make and --pull on all build targets

--- a/debian/Makefile
+++ b/debian/Makefile
@@ -1,6 +1,9 @@
-.PHONY: build
+.PHONY: build push
 
-NAME=flemeur/debian
+NAME = flemeur/debian
 
 build:
-	docker build -t ${NAME} .
+	docker build --pull -t $(NAME) .
+
+push:
+	docker push $(NAME)
