--- a/mariadb/Makefile
+++ b/mariadb/Makefile
@@ -1,6 +1,9 @@
-.PHONY: build
+.PHONY: build push
 
-NAME=flemeur/mariadb
+NAME = flemeur/mariadb
 
 build:
-	docker build -t ${NAME} .
+	docker build --pull -t $(NAME) .
+
+push:
+	docker push $(NAME)
