--- a/apache-php/Makefile
+++ b/apache-php/Makefile
@@ -1,6 +1,9 @@
-.PHONY: build
+.PHONY: build push
 
-NAME=flemeur/apache-php
+NAME = flemeur/apache-php
 
 build:
-	docker build -t ${NAME} .
+	docker build --pull -t $(NAME) .
+
+push:
+	docker push $(NAME)
