--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -2,6 +2,12 @@ FROM debian
 
 MAINTAINER Flemming Andersen <flemming@flamingcode.com>
 
-ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND=noninteractive \
+	HISTFILE=/dev/null
 
-RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates openssl && apt-get clean
+RUN apt-get update && \
+	apt-get install -y --no-install-recommends \
+	curl \
+	ca-certificates \
+	openssl && \
+	apt-get clean
